# Challenge24

./: .gitignore  Cargo.toml  README.md  Rocket.toml  challenge24.cs  package-lock.json  package.json  prettier.config.js  tailwind.config.js
src/: generator.rs  main.rs
src/generator/: mod.rs  structs.rs
static/js/: fraction_5.2.1.min.js  index.js
templates/: index.html  index.html.j2
tests/: generator_test.rs
