[package]
name = "ch24"
version = "0.1.0"
edition = "2021"

[dependencies]
fraction = "0.15.3"
rand = "0.8.5"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["minijinja"] }
serde = "1.0.215"
strum = { version = "0.26.3" }
strum_macros = "0.26.4"
